...
                type="com.example.moneytransfer.ui.transfer.TransferViewModel"/>

    </data>

    <android.support.v7.widget.LinearLayoutCompat

            android:id="@+id/linear_transfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.transfer.TransferActivity"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_margin="20dp"
...
